<resources>
    <string name="app_name">PolApp</string>
    <string name="cognome">Seleziona Ruolo</string>
    <string name="nome">Seleziona Facoltà di Appartenenza</string>
    <string name="salva">Salva</string>
    <string name="DetectedButton">Livello Riempimento</string>
    <string name="rifiuti1">INDIFFERENZIATA</string>
    <string name="rifiuti2">PLASTICA</string>
    <string name="rifiuti3">CARTA</string>
    <string name="rifiuti4">STATO ISOLA</string>
    <string-array name="areeuniv">
        <item>Area Economico-Statistica</item>
        <item>Area Giuridica</item>
        <item>Area Medica</item>
        <item>Area Psicologica</item>
        <item>Area di Scienze della Formazione</item>
        <item>Area di Scienze</item>
        <item>Area Sociologica</item>
    </string-array>
    <string-array name="ruoli">
        <item>Studente</item>
        <item>Docente</item>
        <item>Personale ATA</item>
    </string-array>
    <string-array name="percentuali">
        <item>0%</item>
        <item>25%</item>
        <item>50%</item>
        <item>75%</item>
        <item>100%</item>
    </string-array>
    <integer-array name="values">
        <item>0</item>
        <item>25</item>
        <item>50</item>
        <item>75</item>
        <item>100</item>
    </integer-array>
    <string name="errore">ERRORE</string>
    <string name="testoerrore">Seleziona tutti i livelli di riempimento per inviare la notifica</string>
    <string name="invionotifica">Invio Notifica</string>
    <string name="message">Tutti i livelli sono stati inseriti</string>
    <string name="snackbar">Dati salvati</string>
    <string name="snackbaraction">CONTINUA</string>
    <string name="problem">Segnala un Problema</string>
    <string name="send">Invia</string>
    <string name="ok">Ok</string>
    <string name="cestinoindiff">Indifferenziato</string>
    <string name="cestinocarta">Carta</string>
    <string name="cestinoplastica">Plastica e Metallo</string>
    <string name="cestinovetro">Vetro</string>
    <string name="indicazionivuoto">"premi per inserire il livello di riempimento"</string>
    <string name="indicazionipieno">livello riempimento: </string>
    <string name="scanqr">Scansiona il QR Code</string>
    <string name="helpqr">Clicca su questo bottone per iniziare la scansione del Qr Code dell\'area ecologica</string>
    <string name="description">Descrivi il problema brevemente</string>
    <string name="photo">Allega Foto</string>
    <string name="photosaved">Foto Salvata</string>
    <string name="notificationsent">Notifica Inviata</string>
    <string name="sentdata">Dati Inviati</string>
    <string name="cancel_button">X</string>
    <string name="fill_level">Livello riempimento: </string>
    <string name="no_internet">Nessuna connessione internet</string>
    <string name="scan_code">Codice rilevato: %1$s</string>
    <string name="negative_action">Annulla</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_data">DataActivity</string>
    <string name="title_activity_detected">DetectedActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
