<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/notify"
    tools:context="disco.unimib.it.polapp.NotifyActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme.Toolbar"
        app:titleTextColor="@android:color/white"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="3dp" />

    <EditText
        android:id="@+id/editText"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar4"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textMultiLine|textLongMessage"
        android:selectAllOnFocus="false"
        android:singleLine="false" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText"
        android:layout_marginEnd="148dp"
        android:layout_marginRight="148dp"
        android:layout_marginTop="25dp"
        android:background="@color/colorPrimary"
        android:elevation="2dp"
        android:text="@string/send"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button3"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:background="@color/colorPrimary"
        android:elevation="2dp"
        android:text="@string/photo"
        android:textColor="@android:color/background_light" />
</RelativeLayout>
